// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion New collapses 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eQNgno fuCIrX"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cOFTSb hkjxxp"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR eBqoeV"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New expands 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eQNgno fuCIrX"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-iAvgwm DhisF"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR fkgaXm"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eQNgno fuCIrX"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cOFTSb hkjxxp"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR eBqoeV"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-kOsxa-d kMBWLd"
    size="xlarge"
  >
    <div
      className="sc-iyOMks icxULV"
      size="xlarge"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Test accordion
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="xlarge"
    >
      <div
        className="sc-hGtivm uWGUd"
        size="xlarge"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders content outside 1`] = `
<div
  className="sc-kOsxa-d fOnOzL"
  size="xlarge"
>
  <div
    className="sc-iyOMks jZaKmB"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eQNgno fuCIrX"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cOFTSb hkjxxp"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR eBqoeV"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders disable open 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eQNgno bmerLk"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cOFTSb hkjxxp"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR eBqoeV"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders header content 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <div
      className="flex"
    >
      <svg
        className="sc-kLLXSd"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.833 13.889h6.334m-6.334 4.222H16m-.03 7.389c-5.247 0-9.47-4.328-9.47-9.548S10.753 6.5 16 6.5s9.5 4.232 9.5 9.452c0 1.932-.583 3.73-1.583 5.227L25.5 25.5h-9.53z"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <svg
        className="sc-ikZpkk"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.846 21.982v-.5h-.162l-.132.095.294.404zm-3.258 2.365l-.294-.404.294.404zM21 21.981v-.5.5zM6.5 10.5v13.038h1V10.5h-1zm18 0v7.482h1V10.5h-1zM21 6H11v1h10V6zm-9.448 15.577l-3.258 2.366.587.809 3.259-2.366-.588-.81zM21 21.48h-9.154v1H21v-1zM25.5 10.5A4.5 4.5 0 0021 6v1a3.5 3.5 0 013.5 3.5h1zm-18 0A3.5 3.5 0 0111 7V6a4.5 4.5 0 00-4.5 4.5h1zm-1 13.038c0 1.226 1.39 1.934 2.381 1.214l-.587-.81a.5.5 0 01-.794-.404h-1zm18-5.556a3.5 3.5 0 01-3.5 3.5v1a4.5 4.5 0 004.5-4.5h-1z"
          fill="currentColor"
        />
      </svg>
      <svg
        className="sc-jIZahH"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 10.5h.5H7zm0 13.038h-.5.5zM25 10.5h-.5.5zm0 7.482h.5-.5zM21 6.5V6v.5zm-10 0V7v-.5zm.846 15.482v-.5h-.162l-.132.095.294.404zm-3.258 2.365l-.294-.404.294.404zM21 21.981v-.5.5zM13 14a.5.5 0 100 1v-1zm6 1a.5.5 0 100-1v1zm-2.5-3.5a.5.5 0 10-1 0h1zm-1 6a.5.5 0 001 0h-1zm-9-7v13.038h1V10.5h-1zm18 0v7.482h1V10.5h-1zM21 6H11v1h10V6zm-9.448 15.577l-3.258 2.366.587.809 3.259-2.366-.588-.81zM21 21.48h-9.154v1H21v-1zM25.5 10.5A4.5 4.5 0 0021 6v1a3.5 3.5 0 013.5 3.5h1zm-18 0A3.5 3.5 0 0111 7V6a4.5 4.5 0 00-4.5 4.5h1zm-1 13.038c0 1.226 1.39 1.934 2.381 1.214l-.587-.81a.5.5 0 01-.794-.404h-1zm18-5.556a3.5 3.5 0 01-3.5 3.5v1a4.5 4.5 0 004.5-4.5h-1zM13 15h6v-1h-6v1zm2.5-3.5v6h1v-6h-1z"
          fill="currentColor"
        />
      </svg>
      <svg
        className="sc-bZnhIo"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.5 10.5H6h.5zm0 3.134H7h-.5zM18.393 6.5V6v.5zm-7.894 0V7v-.5zm-.493 5.667v-.5H9.77l-.15.182.386.318zm-1.735 2.104l.386.318-.386-.319zm10.122-2.104v.5-.5zm2.834-2.833h-.5.5zM24.5 20.29h.5-.5zm0 2.777H24h.5zm-11.894-6.777v.5-.5zm7.894 0v-.5.5zm.493 5.667l.355-.352-.146-.148h-.209v.5zm1.796 1.814l.355-.352-.355.352zm-10.183-1.814v.5-.5zM6 10.5v3.134h1V10.5H6zM18.393 6H10.5v1h7.894V6zM9.62 11.85l-1.735 2.102.772.637 1.735-2.104-.772-.636zm8.773-.183h-8.387v1h8.387v-1zm3.334-2.333A3.334 3.334 0 0018.393 6v1a2.334 2.334 0 012.334 2.334h1zM7 10.5A3.5 3.5 0 0110.5 7V6A4.5 4.5 0 006 10.5h1zm-1 3.134c0 1.407 1.761 2.04 2.657.955l-.772-.637A.5.5 0 017 13.634H6zm14.727-4.3a2.334 2.334 0 01-2.334 2.333v1a3.334 3.334 0 003.334-3.333h-1zM24 20.29v2.777h1v-2.777h-1zm-11.394-3.5H20.5v-1h-7.894v1zm8.032 5.519l1.795 1.814.711-.704-1.796-1.814-.71.704zm-8.032.148h8.387v-1h-8.387v1zm-2.334-3.334a2.334 2.334 0 012.334-2.333v-1a3.334 3.334 0 00-3.334 3.333h1zM25 20.291a4.5 4.5 0 00-4.5-4.5v1a3.5 3.5 0 013.5 3.5h1zm-1 2.777a.5.5 0 01-.856.352l-.71.704c.942.952 2.566.285 2.566-1.056h-1zM9.272 19.124a3.334 3.334 0 003.334 3.334v-1a2.334 2.334 0 01-2.334-2.334h-1z"
          fill="currentColor"
        />
      </svg>
    </div>
    <button
      className="sc-eQNgno fuCIrX"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cOFTSb hkjxxp"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR eBqoeV"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders open by default 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eQNgno fuCIrX"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-iAvgwm DhisF"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iNFqmR fkgaXm"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders sizes variants 1`] = `
<div
  className="flex flex-col gap-y-3"
>
  <div
    className="sc-kOsxa-d kMBWLd"
    size="xlarge"
  >
    <div
      className="sc-iyOMks icxULV"
      size="xlarge"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        X Large (Default)
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="xlarge"
    >
      <div
        className="sc-hGtivm uWGUd"
        size="xlarge"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kOsxa-d gFczPM"
    size="large"
  >
    <div
      className="sc-iyOMks dufzMP"
      size="large"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Large
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="large"
    >
      <div
        className="sc-hGtivm haoRvc"
        size="large"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kOsxa-d fuyOKn"
    size="medium"
  >
    <div
      className="sc-iyOMks eCsgWj"
      size="medium"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Medium
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="medium"
    >
      <div
        className="sc-hGtivm kEtHir"
        size="medium"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kOsxa-d hebXrR"
    size="small"
  >
    <div
      className="sc-iyOMks dfmGaM"
      size="small"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Small
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="small"
    >
      <div
        className="sc-hGtivm hrtSoB"
        size="small"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders sizes variants with content outside 1`] = `
<div
  className="flex flex-col gap-y-3"
>
  <div
    className="sc-kOsxa-d fOnOzL"
    size="xlarge"
  >
    <div
      className="sc-iyOMks jZaKmB"
      size="xlarge"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        X Large (Default)
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="xlarge"
    >
      <div
        className="sc-hGtivm uWGUd"
        size="xlarge"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kOsxa-d fOnOzL"
    size="large"
  >
    <div
      className="sc-iyOMks eDNOzR"
      size="large"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Large
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="large"
    >
      <div
        className="sc-hGtivm haoRvc"
        size="large"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kOsxa-d fOnOzL"
    size="medium"
  >
    <div
      className="sc-iyOMks dCkBCQ"
      size="medium"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Medium
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="medium"
    >
      <div
        className="sc-hGtivm kEtHir"
        size="medium"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kOsxa-d fOnOzL"
    size="small"
  >
    <div
      className="sc-iyOMks jJBdta"
      size="small"
    >
      <h3
        className="sc-ePsPkC bdMrNV"
        onClick={[Function]}
      >
        Small
      </h3>
      <button
        className="sc-eQNgno fuCIrX"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-cOFTSb hkjxxp"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iNFqmR eBqoeV"
      size="small"
    >
      <div
        className="sc-hGtivm hrtSoB"
        size="small"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders without button 1`] = `
<div
  className="sc-kOsxa-d kMBWLd"
  size="xlarge"
>
  <div
    className="sc-iyOMks icxULV"
    size="xlarge"
  >
    <h3
      className="sc-ePsPkC bdMrNV"
      onClick={[Function]}
    >
      Test accordion
    </h3>
  </div>
  <div
    className="sc-iNFqmR eBqoeV"
    size="xlarge"
  >
    <div
      className="sc-hGtivm uWGUd"
      size="xlarge"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;
